--- a/site2.0/index.html
+++ b/site2.0/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pegada Ecológica CSN</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
     <link rel="icon" href="Imagens/Logosite.png">
 </head>
 <body>
@@ -19,9 +20,9 @@
         <i class="bi bi-justify"></i>
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-          <button class="dropdown-item" type="button" id="ir_objetivo">Objetivo</button>
-          <button class="dropdown-item" type="button" id="ir_pilares">Pilares</button>
-          <button class="dropdown-item" type="button" id="ir_equipe">Equipe</button>
+          <button class="dropdown-item" type="button" id="ir_objetivo"><i class="bi bi-lightbulb"></i> Objetivo</button>
+          <button class="dropdown-item" type="button" id="ir_pilares"><i class="bi bi-recycle"></i> Pilares</button>
+          <button class="dropdown-item" type="button" id="ir_equipe"><i class="bi bi-person-circle"></i> Equipe</button>
         </div>
       </div>
     </li>
