--- a/site2.0/index.html
+++ b/site2.0/index.html
@@ -40,20 +40,20 @@
 
   <!-- Tela inicial -->
   <div id="inicio">
-    <h1 class="display-4" style="color: #000000;">Faça sua pegada ecológica</h1>
+    <h1 style="color: #000000;">Faça sua pegada ecológica</h1>
     <button class="btn btn-success" id="btn_começar" >Comece agora</button>
     <img id="imagem_globo" src="Imagens/globo.png">
   </div>
   
   <!-- tela do objetivo -->
   <div id="objetivo">
-    <h2 class="display-4" style="color: #ebebeb;">O que fazemos?</h2>
+    <h2 style="color: #ebebeb;">O que fazemos?</h2>
     <p id="texto_objetivo">Nosso projeto consiste em um quiz que calcula o seu impacto no meio ambiente, baseado em seu estilo de vida.</p>
   </div>
   
   <!-- tela dos pilares -->
   <div id="pilares">
-    <h2 class="display-4" style="color: #012030;">Nossos Pilares</h2>
+    <h2 style="color: #012030;">Nossos Pilares</h2>
     <!-- caixas pilares -->
     <div class="caixa_pilar" id="caixa1">
       <p class="titulo_caixa">Conscientização</p>
@@ -79,7 +79,7 @@
   
   <!-- Nossa equipe -->
   <div id="equipe">
-    <h2 class="display-4" style="color: #012030;">Nossa equipe</h2>
+    <h2 style="color: #012030;">Nossa equipe</h2>
     <div id="card">
       <img id="imagem_card" class="border border-primary">
       <div id="fundo_funcionalidade" class="border border-dark"><p id="funcionalidade"></p></div>
@@ -98,7 +98,7 @@
   <!-- Pagina quiz -->
   <div id="pagina_quiz">
     <img id="seta_cima" src="Imagens/icons/seta_cima.png">
-    <h2 class="display-4" style="color: #EBEBEB;">Faça a diferença</h2>
+    <h2 style="color: #EBEBEB;">Faça a diferença</h2>
     <button class="btn btn-success" id="inicializador">Iniciar quiz  <i class="bi bi-tree"></i></button>
     <img src="Imagens/pegadaFin.jpg" id="imagem_final" class="border border-success">>
   </div>
