--- a/site2.0/index.html
+++ b/site2.0/index.html
@@ -31,10 +31,10 @@
       <i class="bi bi-brightness-high-fill" id="simbolo_tema"></i>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="https://www.facebook.com/fundacaocsn">facebook</a>
+      <a class="nav-link" href="https://www.facebook.com/fundacaocsn"><i class="bi bi-facebook"></i></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="https://www.instagram.com/fundacaocsn/">instagram</a>
+      <a class="nav-link" href="https://www.instagram.com/fundacaocsn/"><i class="bi bi-instagram"></i></a>
     </li>
   </ul>
 
