--- a/site2.0/resultado.html
+++ b/site2.0/resultado.html
@@ -7,6 +7,9 @@
     <title>Resultado</title>
     <link rel="icon" href="Imagens/Logosite.png">
     <link rel="stylesheet" href="resultado.css" >
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div id="caixa_titulo">
@@ -15,6 +18,9 @@
     <div id="caixa_resultado">
         <p id="texto_resultado">Sua pontuação foi...</p>
         <p id="resultado"></p>
+        <div class="progress" style="height: 50px; width: 80%;">
+            <div class="progress-bar" id="barra_resultado" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
     </div>
     <div id="caixa_geral">
         <p id="texto_geral"></p>
