Resolvido o problema das imagens não aparecerem no carrossel entre outras alterações nos diretórios

--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pegada Ecológica CSN</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-    <link rel="icon" href="Imagens/Logosite.png">
+    <link rel="icon" href="../Imagens/Logosite.png">
 </head>
 <body>
 
@@ -43,7 +43,7 @@
   <div id="inicio">
     <h1 style="color: #000000;">Faça sua pegada ecológica</h1>
     <button class="btn btn-success" id="btn_começar" >Comece agora</button>
-    <img id="imagem_globo" src="Imagens/globo.png">
+    <img id="imagem_globo" src="../Imagens/globo.png">
   </div>
   
   <!-- tela do objetivo -->
@@ -58,22 +58,22 @@
     <!-- caixas pilares -->
     <div class="caixa_pilar" id="caixa1">
       <p class="titulo_caixa">Conscientização</p>
-      <img id="imagem_caixa" src="Imagens/icons/Maozinha.png">
+      <img id="imagem_caixa" src="../Imagens/icons/Maozinha.png">
       <p id="texto_caixa">Com o objetivo de conscientizar, fazemos com que as pessoas repensem seus hábitos.</p>
     </div>
     <div class="caixa_pilar" id="caixa2">
       <p class="titulo_caixa">Importância</p>
-      <img id="imagem_caixa" src="Imagens/icons/Antivirus.png">
+      <img id="imagem_caixa" src="../Imagens/icons/Antivirus.png">
       <p id="texto_caixa">Reforçamos as pautas ambientais através do nosso projeto. Realizando um levantamento geral que pode ser usado futuramente em políticas públicas.</p>
     </div>
     <div class="caixa_pilar" id="caixa3">
       <p class="titulo_caixa">Energias Limpas</p>
-      <img id="imagem_caixa" src="Imagens/icons/Energia.png">
+      <img id="imagem_caixa" src="../Imagens/icons/Energia.png">
       <p id="texto_caixa">Somos defensores do uso da energia limpa devido à crise energética atual. A energia limpa é diferente da renovável. Pois tem a capacidade de realizar sua função com impacto reduzido.</p>
     </div>
     <div class="caixa_pilar" id="caixa4">
       <p class="titulo_caixa">Reciclagem</p>
-      <img id="imagem_caixa" src="Imagens/icons/Reciclagem.png">
+      <img id="imagem_caixa" src="../Imagens/icons/Reciclagem.png">
       <p id="texto_caixa">Para reduzir o impacto ambiental, é muito importante entender os 3Rs da sustentabilidade: reciclar , reduzir e reutilizar. Diminuindo a extração de matéria prima da natureza, evitamos o desperdício de recursos naturais.</p>
     </div>
   </div>
@@ -98,18 +98,18 @@
   
   <!-- Pagina quiz -->
   <div id="pagina_quiz">
-    <img id="seta_cima" src="Imagens/icons/seta_cima.png">
+    <img id="seta_cima" src="../Imagens/icons/seta_cima.png">
     <h2 style="color: #EBEBEB;">Faça a diferença</h2>
     <button class="btn btn-success" id="inicializador">Iniciar quiz  <i class="bi bi-tree"></i></button>
-    <img src="Imagens/pegadaFin.jpg" id="imagem_final" class="border border-success">>
+    <img src="../Imagens/pegadaFin.jpg" id="imagem_final" class="border border-success">>
   </div>
 
   <!-- scripts -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="pagina.js"></script>
-  <script src="carrousel.js"></script>
+  <script src="../pagina.js"></script>
+  <script src="../carrousel.js"></script>
   <script>criar_caixa_pilar()</script>
 
 </body>
