--- a/site2.0/html/quiz.html
+++ b/site2.0/html/quiz.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="quizbg.css">
+	<link rel="stylesheet" href="../css/quizbg.css">
 	<title>Quiz</title>
-	<link rel="icon" href="Imagens/interrogacao.png">
-	<link rel="stylesheet" href="quiz.css">
+	<link rel="icon" href="../Imagens/interrogacao.png">
+	<link rel="stylesheet" href="../css/quiz.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
 			<button id="finalizar" class="enviarPesquisa">Finalizar</button>
 		</div>
 	</div>
-	<script src="quiz.js"></script>
+	<script src="../quiz.js"></script>
 </body>
 </div>
 </html>
