--- a/site2.0/html/resultado.html
+++ b/site2.0/html/resultado.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultado</title>
     <link rel="icon" href="Imagens/Logosite.png">
-    <link rel="stylesheet" href="resultado.css" >
+    <link rel="stylesheet" href="./css/resultado.css" >
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -40,6 +40,6 @@
         <button id="ir_inicio">Início</button>
         <button id="ir_quiz">Refazer Quiz</button>
     </div>
-    <script src="resultado.js"></script>
+    <script src="./resultado.js"></script>
 </body>
 </html>
