ajustes que eu esqueci xd

--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -28,9 +28,9 @@
       </div>
     </li>
     <!-- resto da nav bar -->
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <i class="bi bi-brightness-high-fill" id="simbolo_tema"></i>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link" href="https://www.facebook.com/fundacaocsn"><i class="bi bi-facebook"></i></a>
     </li>
@@ -101,7 +101,6 @@
     <img id="seta_cima" src="../Imagens/icons/seta_cima.png">
     <h2 style="color: #EBEBEB;">Faça a diferença</h2>
     <button class="btn btn-success" id="inicializador">Iniciar quiz  <i class="bi bi-tree"></i></button>
-    <img src="../Imagens/pegadaFin.jpg" id="imagem_final" class="border border-success">>
   </div>
 
   <!-- scripts -->
