--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" href="../Imagens/Logosite.png">
 </head>
 <body>
@@ -21,9 +27,9 @@
         <i class="bi bi-justify"></i>
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-          <button class="dropdown-item" type="button" id="ir_objetivo"><i class="bi bi-lightbulb"></i> Objetivo</button>
-          <button class="dropdown-item" type="button" id="ir_pilares"><i class="bi bi-recycle"></i> Pilares</button>
-          <button class="dropdown-item" type="button" id="ir_equipe"><i class="bi bi-person-circle"></i> Equipe</button>
+          <button class="dropdown-item" type="button" id="ir_objetivo"><i class="bi bi-lightbulb"></i>   Objetivo</button>
+          <button class="dropdown-item" type="button" id="ir_pilares"><i class="bi bi-recycle"></i>   Pilares</button>
+          <button class="dropdown-item" type="button" id="ir_equipe"><i class="bi bi-person-circle"></i>   Equipe</button>
         </div>
       </div>
     </li>
@@ -41,7 +47,7 @@
 
   <!-- Tela inicial -->
   <div id="inicio">
-    <h1 style="color: #000000;">Faça sua pegada ecológica</h1>
+    <h1>Faça sua pegada ecológica</h1>
     <button class="btn btn-success" id="btn_começar" >Comece agora</button>
     <img id="imagem_globo" src="../Imagens/globo.png">
   </div>
@@ -80,7 +86,7 @@
   
   <!-- Nossa equipe -->
   <div id="equipe">
-    <h2 style="color: #012030;">Nossa equipe</h2>
+    <h2 style="color: #012030;">Nossa Equipe</h2>
     <div id="card">
       <img id="imagem_card" class="border border-primary">
       <div id="fundo_funcionalidade" class="border border-dark"><p id="funcionalidade"></p></div>
@@ -100,7 +106,7 @@
   <div id="pagina_quiz">
     <img id="seta_cima" src="../Imagens/icons/seta_cima.png">
     <h2 style="color: #EBEBEB;">Faça a diferença</h2>
-    <button class="btn btn-success" id="inicializador">Iniciar quiz  <i class="bi bi-tree"></i></button>
+    <button class="btn btn-success" id="inicializador">Iniciar Quiz</i></button>
   </div>
 
   <!-- scripts -->
