--- a/site2.0/html/resultado.html
+++ b/site2.0/html/resultado.html
@@ -28,6 +28,7 @@
         <p id="titulo_resultado"></p>
     </div>
     <div id="caixa_resultado">
+        <img id="imagem_fundo">
         <p id="texto_resultado">Sua pontuação foi...</p>
         <p id="resultado"></p>
         <div class="progress" style="height: 15px; width: 60%; left: 17%;">
