--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -15,6 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" href="../Imagens/Logosite.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -47,20 +50,20 @@
 
   <!-- Tela inicial -->
   <div id="inicio">
-    <h1>Faça sua pegada ecológica</h1>
-    <button class="btn btn-success" id="btn_começar" >Comece agora</button>
+    <h1 id="tInicio">Faça sua <br>Pegada Ecológica</h1>
+    <button  id="btn_começar" >Comece agora</button>
     <img id="imagem_globo" src="../Imagens/globo.png">
   </div>
   
   <!-- tela do objetivo -->
   <div id="objetivo">
-    <h2 style="color: #ebebeb;">O que fazemos?</h2>
+    <h2 id="tOqFazemos" style="color: #ebebeb;">O que fazemos?</h2>
     <p id="texto_objetivo">Nosso projeto consiste em um quiz que calcula o seu impacto no meio ambiente, baseado em seu estilo de vida.</p>
   </div>
-  
+
   <!-- tela dos pilares -->
   <div id="pilares">
-    <h2 style="color: #012030;">Nossos Pilares</h2>
+    <h2 id="tNossosPilares"style="color: #012030;">Nossos Pilares</h2>
     <!-- caixas pilares -->
     <div class="caixa_pilar" id="caixa1">
       <p class="titulo_caixa">Conscientização</p>
@@ -83,6 +86,7 @@
       <p id="texto_caixa">Para reduzir o impacto ambiental, é muito importante entender os 3Rs da sustentabilidade: reciclar , reduzir e reutilizar. Diminuindo a extração de matéria prima da natureza, evitamos o desperdício de recursos naturais.</p>
     </div>
   </div>
+
   
   <!-- Nossa equipe -->
   <div id="equipe">
