--- a/site2.0/html/quiz.html
+++ b/site2.0/html/quiz.html
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../css/quizbg.css">
 	<title>Quiz</title>
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
 	<link rel="icon" href="../Imagens/interrogacao.png">
 	<link rel="stylesheet" href="../css/quiz.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,11 +16,15 @@
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&family=Montserrat:wght@700&display1=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <div class="bg">
 <body>
 	<div class="painel">
+		<div id="bola_numero"><div id="numero_bola">1</div></div>
 		<div id="question" class="perguntas" >
 			Pergunta vem aqui.
 		</div>
