--- a/site2.0/html/quiz.html
+++ b/site2.0/html/quiz.html
@@ -4,12 +4,17 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../css/quizbg.css">
 	<title>Quiz</title>
-
+	<!--Bootstrap-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+	<!--imagens-->
 	<link rel="icon" href="../Imagens/interrogacao.png">
+
+	<!--Fontes-->
 	<link rel="stylesheet" href="../css/quiz.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +29,11 @@
 <div class="bg">
 <body>
 	<div class="painel">
+		<!--Barra de progresso-->
+		<div class="progress" style="height: 15px; width: 100%; left: 0%; border-radius: 0;">
+            <div class="progress-bar" id="barra_resultado" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+
 		<div id="bola_numero"><div id="numero_bola">1</div></div>
 		<div id="question" class="perguntas" >
 			Pergunta vem aqui.
