--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -18,19 +18,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
+    	<!--Bootstrap-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
 </head>
 <body>
   <!-- Tela inicial -->
   <div id="inicio">
-    <h1 id="tInicio">Faça sua <br>Pegada Ecológica</h1>
-    <button  id="btn_começar" >Comece agora</button>
-    <img id="imagem_globo" src="../Imagens/globo.png">
+    <p id="tInicio">Descubra seu impacto no meio ambiente,<br> <b>Calcule sua 
+      Pegada Ecológica</b></p>
+      <h1 id="tituloInicio">GreenLight</h1>
+    <button  id="btn_começar" >Descubra Agora!</button>
+    <i id="imagem_globo" class="bi bi-globe-americas"></i>
   </div>
   
   <!-- tela do objetivo -->
   <div id="objetivo">
     <h2 id="tOqFazemos" style="color: #ebebeb;">O que fazemos?</h2>
-    <p id="texto_objetivo">Nosso projeto consiste em um quiz que calcula o seu impacto no meio ambiente, baseado em seu estilo de vida.</p>
+    <p id="texto_objetivo">Nosso projeto é uma pesquisa que calcula o seu impacto no meio ambiente <br> usando, com base, o seu estilo de vida.</p>
   </div>
 
   <!-- tela dos pilares -->
