--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -36,6 +36,15 @@
   <div id="objetivo">
     <h2 id="tOqFazemos" style="color: #ebebeb;">O que fazemos?</h2>
     <p id="texto_objetivo">Nosso projeto é uma pesquisa que calcula o seu impacto no meio ambiente <br> usando, com base, o seu estilo de vida.</p>
+    <h2 id="tComo_func" style="color: #ebebeb;">Mas como funciona?</h2>
+    <p id="texto_pontuacao">Nossa pesquisa poderá exibir 3 resultados dependendo da sua pontuação, são eles:</p>
+    <div id="Lista_pontuacao">
+    <ul>
+      <li style="color: #DBF227;">Excelente: de 50 a 70 pontos</li>
+      <li style="color: #F8FFCF;">Moderado: de 35 a 49 pontos</li>
+      <li style="color: #FF3939;">Péssimo: menos de 35 pontos</li>
+      </ul>
+    </div>
   </div>
 
   <!-- tela dos pilares -->
