--- a/site2.0/html/quiz.html
+++ b/site2.0/html/quiz.html
@@ -30,8 +30,8 @@
 <body>
 	<div class="painel">
 		<!--Barra de progresso-->
-		<div class="progress" style="height: 15px; width: 100%; left: 0%; border-radius: 0;">
-            <div class="progress-bar" id="barra_resultado" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+		<div class="progress" style="height: 15px; width: 100%; left: 0%; border-radius: 0; background:#012030;">
+            <div class="progress-bar" id="barra_resultado" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="background: #a4c43b;"></div>
         </div>
 
 		<div id="bola_numero"><div id="numero_bola">1</div></div>
