--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <!-- tela dos pilares -->
+    <!-- tela dos pilares -->
   <div id="pilares">
     <h2 id="tNossosPilares"style="color: #012030;">Nossos Pilares</h2>
     <!-- caixas pilares -->
@@ -59,20 +59,19 @@
     <div class="caixa_pilar" id="caixa2">
       <p class="titulo_caixa">Importância</p>
       <img id="imagem_caixa" src="../Imagens/icons/Antivirus.png">
-      <p id="texto_caixa">Reforçamos as pautas ambientais através do nosso projeto. Realizando um levantamento geral que pode ser usado futuramente em políticas públicas.</p>
+      <p id="texto_caixa">Reforçamos as pautas ambientais com nosso projeto. Realizamos um levantamento geral para melhor entendimento sobre o impacto no meio ambiente.</p>
     </div>
     <div class="caixa_pilar" id="caixa3">
       <p class="titulo_caixa">Energias Limpas</p>
       <img id="imagem_caixa" src="../Imagens/icons/Energia.png">
-      <p id="texto_caixa">Somos defensores do uso da energia limpa devido à crise energética atual. A energia limpa é diferente da renovável. Pois tem a capacidade de realizar sua função com impacto reduzido.</p>
+      <p id="texto_caixa">Defendemos o uso da energia limpa. Essa, tem um impacto ambiental bem reduzido, comparado com outras.</p>
     </div>
     <div class="caixa_pilar" id="caixa4">
       <p class="titulo_caixa">Reciclagem</p>
       <img id="imagem_caixa" src="../Imagens/icons/Reciclagem.png">
-      <p id="texto_caixa">Para reduzir o impacto ambiental, é muito importante entender os 3Rs da sustentabilidade: reciclar , reduzir e reutilizar. Diminuindo a extração de matéria prima da natureza, evitamos o desperdício de recursos naturais.</p>
+      <p id="texto_caixa">Com os 3Rs da sustentabilidade - reciclar, reduzir e reutilizar - é possível evitar o desperdício dos recursos naturais e diminuir a extração de máteria prima.</p>
     </div>
   </div>
-
   
   <!-- Nossa equipe -->
   <div id="equipe">
