--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -90,6 +90,12 @@
       <div class="circulo_carrousel" id="c3"></div>
       <div class="circulo_carrousel" id="c4"></div>
     </div>
+    <div id="retangulo_redessociais">
+      <a id="instagram" class="bi bi-instagram elemento" style="font-size: 40px; color: #012030;" href=""></a>
+      <a id="site" class="bi bi-globe elemento" style="font-size: 40px; color: #012030;" href=""></a>
+      <a id="linkedin" class="bi bi-linkedin elemento" style="font-size: 40px; color: #012030;" href=""></a>
+      <a id="facebook" class="bi bi-facebook elemento" style="font-size: 40px; color: #012030;" href=""></a>
+    </div>
   </div>
   
   <!-- Pagina quiz -->
