--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -98,6 +98,58 @@
     </div>
   </div>
   
+  <!-- Desenvolvedores -->
+  <div id="desenvolvedores">
+    <h2 style="color: #012030;">Desenvolvedores</h2>
+    <div id="cards_desenvolvedores">
+      <!---->
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_daniel.jpg" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">Daniel Bernardes Cardoso</h5>
+          <p class="card-text">-Líder do projeto<br>-Desenvolvedor full stack</p>
+          <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" class="btn btn-primary">linkedin</a>
+        </div>
+      </div>
+      <!---->
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_daniel.jpg" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">Daniel Bernardes Cardoso</h5>
+          <p class="card-text">-Líder do projeto<br>-Desenvolvedor full stack</p>
+          <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" class="btn btn-primary">linkedin</a>
+        </div>
+      </div>
+      <!---->
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_daniel.jpg" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">Daniel Bernardes Cardoso</h5>
+          <p class="card-text">-Líder do projeto<br>-Desenvolvedor full stack</p>
+          <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" class="btn btn-primary">linkedin</a>
+        </div>
+      </div>
+      <!---->
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_daniel.jpg" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">Daniel Bernardes Cardoso</h5>
+          <p class="card-text">-Líder do projeto<br>-Desenvolvedor full stack</p>
+          <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" class="btn btn-primary">linkedin</a>
+        </div>
+      </div>
+      <!---->
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_daniel.jpg" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">Daniel Bernardes Cardoso</h5>
+          <p class="card-text">-Líder do projeto<br>-Desenvolvedor full stack</p>
+          <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" class="btn btn-primary">linkedin</a>
+        </div>
+      </div>
+  </div>
+  </div>
+
   <!-- Pagina quiz -->
   <div id="pagina_quiz">
     <img id="seta_cima" src="../Imagens/icons/seta_cima.png">
