--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -101,54 +101,66 @@
   <!-- Desenvolvedores -->
   <div id="desenvolvedores">
     <h2 style="color: #012030;">Desenvolvedores</h2>
-    <div id="cards_desenvolvedores">
-      <!---->
+    <!---->
+    <div id="navegacao">
+    <ul id="ul">
+      <li>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_daniel.jpg" alt="Imagem de capa do card">
         <div class="card-body">
-          <h5 class="card-title">Daniel Bernardes Cardoso</h5>
+          <h5 class="card-title">Daniel Cardoso</h5>
           <p class="card-text">-Líder do projeto<br>-Desenvolvedor full stack</p>
           <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" class="btn btn-primary">linkedin</a>
         </div>
       </div>
+      </li>
       <!---->
+      <li>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_daniel.jpg" alt="Imagem de capa do card">
+        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_ramon.png" alt="Imagem de capa do card">
         <div class="card-body">
-          <h5 class="card-title">Daniel Bernardes Cardoso</h5>
-          <p class="card-text">-Líder do projeto<br>-Desenvolvedor full stack</p>
-          <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" class="btn btn-primary">linkedin</a>
+          <h5 class="card-title">Ramon Pereira</h5>
+          <p class="card-text">-Designer<br>-Desenvolvedor front-end</p>
+          <a href="https://www.linkedin.com/in/ramon-pereira-batista-afonso-9aa72b248/" class="btn btn-primary">linkedin</a>
         </div>
       </div>
+      </li>
       <!---->
+      <li>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_daniel.jpg" alt="Imagem de capa do card">
+        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_giovanni.png" alt="Imagem de capa do card">
         <div class="card-body">
-          <h5 class="card-title">Daniel Bernardes Cardoso</h5>
-          <p class="card-text">-Líder do projeto<br>-Desenvolvedor full stack</p>
-          <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" class="btn btn-primary">linkedin</a>
+          <h5 class="card-title">Giovanni Almeida</h5>
+          <p class="card-text">-Designer<br>-Desenvolvedor full stack</p>
+          <a href="https://www.linkedin.com/in/giovanni-dos-santos-almeida-lombone-rodrigues-607a73209" class="btn btn-primary">linkedin</a>
         </div>
       </div>
+      </li>
       <!---->
+      <li>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_daniel.jpg" alt="Imagem de capa do card">
+        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_bernardo.png" alt="Imagem de capa do card">
         <div class="card-body">
-          <h5 class="card-title">Daniel Bernardes Cardoso</h5>
-          <p class="card-text">-Líder do projeto<br>-Desenvolvedor full stack</p>
-          <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" class="btn btn-primary">linkedin</a>
+          <h5 class="card-title">Bernardo Receputi</h5>
+          <p class="card-text">-QA tester<br>-Conceptual Designer</p>
+          <a href="https://www.linkedin.com/in/bernardo-receputi-da-costa-87304926b/" class="btn btn-primary">linkedin</a>
         </div>
       </div>
+      </li>
       <!---->
+      <li>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_daniel.jpg" alt="Imagem de capa do card">
+        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_vitor.png" alt="Imagem de capa do card">
         <div class="card-body">
-          <h5 class="card-title">Daniel Bernardes Cardoso</h5>
-          <p class="card-text">-Líder do projeto<br>-Desenvolvedor full stack</p>
-          <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" class="btn btn-primary">linkedin</a>
+          <h5 class="card-title">Vitor Viana</h5>
+          <p class="card-text">-QA tester<br>-Conceptual Designer</p>
+          <a href="https://www.linkedin.com/in/vitor-viana-33604a26b/" class="btn btn-primary">linkedin</a>
         </div>
       </div>
-  </div>
-  </div>
+      </li>
+    </ul>
+    </div>
+   </div>
 
   <!-- Pagina quiz -->
   <div id="pagina_quiz">
@@ -163,6 +175,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="../pagina.js"></script>
   <script src="../carrousel.js"></script>
+  <script src="../carrousel_desenvolvedores.js"></script>
   <script>criar_caixa_pilar()</script>
 
 </body>
