--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -112,52 +112,64 @@
           <p class="card-text">-Líder do projeto<br>-Desenvolvedor full stack</p>
           <a href="https://www.linkedin.com/in/daniel-cardoso-195808263/" class="btn btn-primary">linkedin</a>
         </div>
-      </div>
+      </div>   
+      <br>
       </li>
+ 
       <!---->
       <li>
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_ramon.png" alt="Imagem de capa do card">
-        <div class="card-body">
-          <h5 class="card-title">Ramon Pereira</h5>
-          <p class="card-text">-Designer<br>-Desenvolvedor front-end</p>
-          <a href="https://www.linkedin.com/in/ramon-pereira-batista-afonso-9aa72b248/" class="btn btn-primary">linkedin</a>
-        </div>
-      </div>
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_giovanni.png" alt="Imagem de capa do card">
+          <div class="card-body">
+            <h5 class="card-title">Giovanni Almeida</h5>
+            <p class="card-text">-Designer<br>-Desenvolvedor full stack</p>
+            <a href="https://www.linkedin.com/in/giovanni-dos-santos-almeida-lombone-rodrigues-607a73209" class="btn btn-primary">linkedin</a>
+          </div>
+        </div>  
+        <br>
       </li>
+
       <!---->
       <li>
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_giovanni.png" alt="Imagem de capa do card">
-        <div class="card-body">
-          <h5 class="card-title">Giovanni Almeida</h5>
-          <p class="card-text">-Designer<br>-Desenvolvedor full stack</p>
-          <a href="https://www.linkedin.com/in/giovanni-dos-santos-almeida-lombone-rodrigues-607a73209" class="btn btn-primary">linkedin</a>
-        </div>
-      </div>
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_ramon.png" alt="Imagem de capa do card">
+          <div class="card-body">
+            <h5 class="card-title">Ramon Pereira</h5>
+            <p class="card-text">-Designer<br>-Desenvolvedor front-end</p>
+            <a href="https://www.linkedin.com/in/ramon-pereira-batista-afonso-9aa72b248/" class="btn btn-primary">linkedin</a>
+          </div>
+        </div>  
+      <br>
       </li>
+
       <!---->
       <li>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_bernardo.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Bernardo Receputi</h5>
-          <p class="card-text">-QA tester<br>-Conceptual Designer</p>
+          <p class="card-text">-QA tester</p>
+          <br>
           <a href="https://www.linkedin.com/in/bernardo-receputi-da-costa-87304926b/" class="btn btn-primary">linkedin</a>
         </div>
-      </div>
+      </div>  
+      <br>
       </li>
+
       <!---->
       <li>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="../Imagens/fotos_desenvolvedores/foto_vitor.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Vitor Viana</h5>
-          <p class="card-text">-QA tester<br>-Conceptual Designer</p>
+          <p class="card-text">-QA tester</p>
+          <br>
           <a href="https://www.linkedin.com/in/vitor-viana-33604a26b/" class="btn btn-primary">linkedin</a>
         </div>
-      </div>
+      </div>      
+      <br>
       </li>
+
     </ul>
     </div>
    </div>
