--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -53,24 +53,24 @@
     <h2 id="tNossosPilares"style="color: #012030;">Nossos Pilares</h2>
     <!-- caixas pilares -->
     <div class="caixa_pilar" id="caixa1">
-      <p class="titulo_caixa">Conscientização</p>
-      <img id="imagem_caixa" src="../Imagens/icons/Maozinha.png">
-      <p id="texto_caixa">Com o objetivo de conscientizar, fazemos com que as pessoas repensem seus hábitos.</p>
+      <p class="titulo_caixa hidden">Conscientização</p>
+      <img id="imagem_caixa" class="hidden" src="../Imagens/icons/Maozinha.png">
+      <p id="texto_caixa" >Com o objetivo de conscientizar, fazemos com que as pessoas repensem seus hábitos.</p>
     </div>
     <div class="caixa_pilar" id="caixa2">
-      <p class="titulo_caixa">Importância</p>
-      <img id="imagem_caixa" src="../Imagens/icons/Antivirus.png">
-      <p id="texto_caixa">Reforçamos as pautas ambientais com nosso projeto. Realizamos um levantamento geral para melhor entendimento sobre o impacto no meio ambiente.</p>
+      <p class="titulo_caixa hidden">Importância</p>
+      <img id="imagem_caixa" class="hidden" src="../Imagens/icons/Antivirus.png">
+      <p id="texto_caixa" >Reforçamos as pautas ambientais com nosso projeto. Realizamos um levantamento geral para melhor entendimento sobre o impacto no meio ambiente.</p>
     </div>
     <div class="caixa_pilar" id="caixa3">
-      <p class="titulo_caixa">Energias Limpas</p>
-      <img id="imagem_caixa" src="../Imagens/icons/Energia.png">
-      <p id="texto_caixa">Defendemos o uso da energia limpa. Essa, tem um impacto ambiental bem reduzido, comparado com outras.</p>
+      <p class="titulo_caixa hidden">Energias Limpas</p>
+      <img id="imagem_caixa" class="hidden" src="../Imagens/icons/Energia.png">
+      <p id="texto_caixa" >Defendemos o uso da energia limpa. Essa, tem um impacto ambiental bem reduzido, comparado com outras.</p>
     </div>
     <div class="caixa_pilar" id="caixa4">
-      <p class="titulo_caixa">Reciclagem</p>
-      <img id="imagem_caixa" src="../Imagens/icons/Reciclagem.png">
-      <p id="texto_caixa">Com os 3Rs da sustentabilidade - reciclar, reduzir e reutilizar - é possível evitar o desperdício dos recursos naturais e diminuir a extração de máteria prima.</p>
+      <p class="titulo_caixa hidden">Reciclagem</p>
+      <img id="imagem_caixa" class="hidden" src="../Imagens/icons/Reciclagem.png">
+      <p id="texto_caixa" >Com os 3Rs da sustentabilidade - reciclar, reduzir e reutilizar - é possível evitar o desperdício dos recursos naturais e diminuir a extração de máteria prima.</p>
     </div>
   </div>
   
